@@ -87,6 +87,9 @@ BUGFIXES:
   ZOOKEEPER-2194: Let DataNode.getChildren() return an unmodifiable view of its children set
   (Hitoshi Mitake via rgs)
 
+  ZOOKEEPER-2201: Network issues can cause cluster to hang due to near-deadlock
+  (Donny Nadolny via rgs)
+
 IMPROVEMENTS:
 
   ZOOKEEPER-1575. adding .gitattributes to prevent CRLF and LF mismatches for
